# rss-scraper-analyser

./: .gitignore  Cargo.toml  README.md  config_template.toml  index.html  script.js  styles.css  submission.html
config_reader/: Cargo.toml
config_reader/src/: lib.rs
src/: austria.rs  config.toml  czechia.rs  france.rs  germany.rs  great_britain.rs  main.rs
src/article/: mod.rs
src/azure_sentiment/: mod.rs
src/charts/: mod.rs
src/openai/: mod.rs
src/sentiment_analysis/: mod.rs
src/translator/: mod.rs
src/vader_sentiment/: mod.rs
src/wordcloud/: mod.rs
wordcloud-rs-main/: Cargo.toml
wordcloud-rs-main/src/: builder.rs  indexed_chars.rs
