[package]
name = "ex1-k12222898"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
roxmltree = "0.20.0"
serde_json = "1.0.133"
config_reader = {path = "./config_reader"}
wordcloud-rs = {path = "wordcloud-rs-main"}
serde = { version = "1.0.215", features = ["derive"] }
text_io = "0.1.12"
regex = "1.11.1"
vader_sentiment = {path = "./vader_sentiment"}
charming = { version = "0.4.0", features = ["ssr"] }
rand = "0.8.5"
